# HannesFeil.github.io

./: Cargo.toml  LICENSE  README.md  Trunk.toml  flake.nix  index.html
.github/workflows/: main.yml  static.yml
src/: about.rs  lib.rs  navigation.rs  theme.rs
src/projects/: interactive.rs  mod.rs
src/projects/boids/: compute.frag  mod.rs  render.frag  render.rs  render.vert
src/projects/fractal_clock/: mod.rs  render.rs
src/webgl/: canvas.rs  compute.rs  mod.rs
